--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,5 +51,22 @@
             android:layout_height="wrap_content"
             android:text="OK (15%)"/>
     </RadioGroup>
-
+    <Switch
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/round_up_switch"
+        android:text="Round up tip?"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tip_options"
+        />
+<Button
+    android:id="@+id/calculate_button"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:text="Calculate"
+    app:layout_constraintTop_toBottomOf="@id/round_up_switch"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
